--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectKey=idrissa-Project-S2-01
 sonar.projectName=idrissa-Project-S2-01
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.language=java
-sonar.java.binaries=.
+sonar.language=ruby
+sonar.ruby.coverage.reportPaths=coverage/.resultset.json
