--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectKey=idrissa-Project EKTSS-S2-01
 sonar.projectName=idrissa-Project EKTSS-S2-01
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.language=java
-sonar.java.binaries=.
+sonar.language=html
+sonar.html.binaries=.
